# proteinvault

./: .gitignore  Dockerfile  README.md  pyproject.toml
scripts/: generate_plots.py
src/proteinvault/: __init__.py  config.py  dependencies.py  main.py
src/proteinvault/api/schemas/: common.py  datasets.py  models.py  predictions.py  tasks.py
src/proteinvault/api/v1/: datasets.py  models.py  router.py
src/proteinvault/cli/: demo.py
src/proteinvault/db/: connection.py  schema.py
src/proteinvault/db/repositories/: dataset_repo.py  measurement_repo.py  model_repo.py  prediction_repo.py  sequence_repo.py  task_repo.py
src/proteinvault/domain/: enums.py  exceptions.py  models.py  validation.py
src/proteinvault/services/: dataset_service.py  model_service.py  prediction_service.py
src/proteinvault/services/scoring/: base.py  esm2.py
tests/: conftest.py  test_smoke.py
tests/e2e/: test_demo_flow.py
tests/integration/: test_dataset_api.py  test_model_api.py  test_prediction_api.py  test_repositories.py
tests/unit/: test_domain_models.py  test_validation.py
